# semantic_audio_filtering

./: .env.example  .gitignore  README.md  process_data_for_filtering.py  process_hf_dataset.py  pyproject.toml  setup_directories.sh  train_filtering_model.ipynb  whisper_evaluation.py  whisper_finetuning.py  whisper_small_finetuning.ipynb
filtering_framework/: apply_filering.py  apply_filtering.ipynb  audio_encoder.py  base_trainer.py  dataset.py  filtering.py  logger.py  manifest_utils.py  model.py  model_utils.py  process_hf_dataset.py  setup_directories.sh  text_encoder.py  train_filtering_model.ipynb  train_filtering_model.py  trainer.py  utils.ipynb  utils.py
filtering_framework/configs/: base_config.yaml  dataset.yaml  model.yaml
filtering_framework/embeddings/: synthetic_audio_features.pkl  synthetic_text_features.pkl
filtering_framework/mlruns/0/: meta.yaml
filtering_framework/mlruns/637985172241964419/: meta.yaml
filtering_framework/mlruns/637985172241964419/cfa08d86596449d0a7f5017ab6ef762a/: meta.yaml
filtering_framework/save/experiments/model1/: config.yaml  train_log.tsv
filtering_framework/utils/: text_preprocessing_utils.py
finetuning/args/: deepspeed_config.json  whisper_large_args.json  whisper_medium_args.json  whisper_small_args.json
tts_data_augmentation/capes_generation_synAudios/: dataset_creation.py
tts_data_augmentation/capes_generation_synAudios/utils/: generation_utils.py
tts_data_augmentation/configurations/: __init__.py  config.py
tts_data_augmentation/data/: generation.ipynb
utils/: evaluation_utils.py  finetuning_utils.py  manifest_utils.py
(+4 files in other folders)
