[tool.poetry]
name = "tts-data-augmentation"
version = "0.1.0"
description = "Synthetic data augmentation technique via LLM for audio. To serve as input for a TTS model training"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
