[tool.poetry]
name = "tts-data-augmentation"
version = "0.1.0"
description = "Synthetic data augmentation technique via LLM for audio. To serve as input for a TTS model training."
authors = ["tiagomosantos <tiago.moco.santos@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
librosa = "^0.10.2.post1"
soundfile = "^0.12.1"
transformers = "^4.42.4"
datasets = "^2.20.0"
jupyter = "^1.0.0"
num2words = "^0.5.13"
omegaconf = "^2.3.0"
torch = "^2.3.1"
mlflow = "^2.14.3"
sentence-transformers = "^3.0.1"
accelerate = "^0.32.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
